@@ -6,6 +6,8 @@
 #if defined(USE_TLS) && defined(HAS_GNUTLS)
 #  include <gnutls/gnutls.h>
 
+#include "typedefs.h"
+
 /* --- Types --- */
 
 typedef gnutls_session tls_session_t;
