@@ -1,6 +1,11 @@
 This file lists all changes made to the game driver in all glory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+07-Apr-2009 (Gnomi)
+  - (pkg-tls.h) Corrected the definition of tls_check_certificate.
+  - (pkg-gnutls.h, pkg-openssl.h) Forgot an include.
+  - (main.c) Removed a superfluous pointer dereference.
+
 21-Mar 2009 (Gnomi)
   - (pkg-tls.c, pkg-openssl.c, pkg-gnutls.c) Separated code for GnuTLS
     and OpenSSL.
@@ -39,7 +44,7 @@ See the file HISTORY for a user-oriented summary of all the changes.
 28-Feb-2009 (Zesstra)
   - (xalloc.c|h, smalloc.c, main.c, lex.c, slaballoc.c, backend.c,
       string_spec, mudlib/sys/rtlimits.h, src/settings*, doc/master/)
-    Renamed --max-malloced to --hard-memory-limit and  MAX_MALLOCED to
+    Renamed --max-malloced to --hard-malloc-limit and  MAX_MALLOCED to
     HARD_MALLOC_LIMIT_DEFAULT and changed the mud configurations.
     Introduced a --soft-memory-limit/SOFT_MALLOC_LIMIT_DEFAULT
     Added set_* and get_memory_limit() and related constants for managing the
